RESOLVED FIXED98238
[WK2][WKTR] TestRunner.setAlwaysAcceptCookies() causes flakiness
https://bugs.webkit.org/show_bug.cgi?id=98238
Summary [WK2][WKTR] TestRunner.setAlwaysAcceptCookies() causes flakiness
Chris Dumez
Reported 2012-10-03 01:05:39 PDT
TestRunner.setAlwaysAcceptCookies() can be called by tests to temporarily force acceptation of all cookies. However, we don't reset this setting in InjectedBundle::beginTesting() so it causes flakiness.
Attachments
Patch (1.31 KB, patch)
2012-10-03 01:08 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-10-03 01:08:05 PDT
Csaba Osztrogonác
Comment 2 2012-10-03 01:10:43 PDT
Comment on attachment 166823 [details] Patch r=me
WebKit Review Bot
Comment 3 2012-10-03 01:43:30 PDT
Comment on attachment 166823 [details] Patch Clearing flags on attachment: 166823 Committed r130262: <http://trac.webkit.org/changeset/130262>
WebKit Review Bot
Comment 4 2012-10-03 01:43:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.