[WK2][WKTR] TestRunner.setAlwaysAcceptCookies() causes flakiness https://bugs.webkit.org/show_bug.cgi?id=98238

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-03
Reviewed by Csaba Osztrogonác.

Reset AlwaysAcceptCookies setting between tests to avoid
flakiness due to TestRunner.setAlwaysAcceptCookies().

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):

git-svn-id: svn://svn.chromium.org/blink/trunk@130262 bbb929c8-8fbe-4397-9dbb-9b2b20218538