third_party/WebKit/Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp
@@ -246,6 +246,7 @@ void InjectedBundle::beginTesting(WKDictionaryRef settings)
     WKBundleSetAllowFileAccessFromFileURLs(m_bundle, m_pageGroup, true);
     WKBundleSetPluginsEnabled(m_bundle, m_pageGroup, true);
     WKBundleSetPopupBlockingEnabled(m_bundle, m_pageGroup, false);
+    WKBundleSetAlwaysAcceptCookies(m_bundle, false);
 
     WKBundleRemoveAllUserContent(m_bundle, m_pageGroup);
 
